crates/vox-codegen/tests/snapshots/golden_corpus_ts_smoke_test__golden_corpus_ts_emit_no_panic@option_type.snap
---
source: crates/vox-codegen/tests/golden_corpus_ts_smoke_test.rs
expression: combined
---
=== vox-app-contract.json ===
{
  "schema_version": 2,
  "http_routes": [],
  "server_fns": [],
  "query_fns": [
    {
      "name": "find_user",
      "route_path": "/api/query/find_user",
      "signature": "fn(name: str) -> Option[str]"
    }
  ],
  "mutation_fns": [],
  "mcp_tools": [],
  "mcp_resources": [],
  "server_config": {
    "bind_host": "127.0.0.1",
    "default_port": 3000,
    "port_env_var": "VOX_PORT",
    "dev_proxy_env_var": "VOX_SSR_DEV_URL",
    "static_assets_embed_dir": "public/"
  }
}

=== vox-tanstack-query.tsx ===
/**
 * TanStack Query helpers — generated by Vox (`vox-compiler`).
 * Wrap async data (e.g. `vox-client` / `fetch`) with `useVoxServerQuery`.
 */
import { QueryClient, QueryClientProvider, useQuery } from "@tanstack/react-query";
import type { ReactElement, ReactNode } from "react";

export const voxQueryClient = new QueryClient({
  defaultOptions: {
    queries: { staleTime: 30_000 },
  },
});

export function VoxQueryProvider({
  children,
}: Readonly<{ children: ReactNode }>): ReactElement {
  return <QueryClientProvider client={voxQueryClient}>{children}</QueryClientProvider>;
}

/** Narrow mapping: stable `queryKey` + promise `queryFn` (pairs with generated server fns). */
export function useVoxServerQuery<TData>(
  queryKey: readonly unknown[],
  queryFn: () => Promise<TData>,
) {
  return useQuery<TData>({ queryKey, queryFn });
}


=== schema.ts ===
// Table interfaces generated by Vox compiler

export interface UserProfile {
  _id: number;
  id: number;
  name: string;
  bio: Option<string>;
  age: Option<number>;
}



=== vox-client.ts ===
// Generated by Vox — typed fetch client for @query / @mutation / @server
// Transport: GET + JSON query values for @query; POST + JSON body for @mutation / @server.
// Do not edit; regenerate with `vox build`.

import { z } from "zod";
/** Wire-format v1 error body when the server returns SSOT §6 JSON (`ok` is always false). */
export type VoxWireError = {
  ok: false;
  code: string;
  message: string;
  request_id?: string;
  details?: unknown;
};

const VoxErrorEnvelopeSchema = z.object({
  ok: z.literal(false),
  code: z.string(),
  message: z.string(),
  request_id: z.string().optional(),
  details: z.unknown().optional(),
});

function parseVoxWireError(text: string): VoxWireError | undefined {
  const s = text.trim();
  if (!s.startsWith("{")) return undefined;
  try {
    const j: unknown = JSON.parse(s);
    const p = VoxErrorEnvelopeSchema.safeParse(j);
    return p.success ? (p.data as VoxWireError) : undefined;
  } catch {
    return undefined;
  }
}

export class VoxApiError extends Error {
  constructor(
    public readonly status: number,
    public readonly path: string,
    /** Raw response body (often JSON text). */
    public readonly responseText: string,
    /** Parsed §6 envelope when the body matches `VoxWireError`. */
    public readonly wireError?: VoxWireError,
  ) {
    const detail =
      wireError !== undefined
        ? `${wireError.code}: ${wireError.message}`
        : responseText
          ? responseText.slice(0, 280)
          : "";
    super(detail ? `${path} failed: ${status} — ${detail}` : `${path} failed: ${status}`);
    this.name = "VoxApiError";
  }
}

let __voxApiBaseRuntime: string | undefined;

/** Override the API base URL at runtime (e.g. after reading a host-injected config). Precedence: this value, then `import.meta.env.VITE_API_URL`, then relative paths. */
export function configureVoxApiBase(base: string | undefined): void {
  __voxApiBaseRuntime = base;
}

function voxApiBase(): string {
  if (__voxApiBaseRuntime !== undefined) return __voxApiBaseRuntime;
  return ((import.meta as unknown as { env?: { VITE_API_URL?: string } }).env?.VITE_API_URL ?? "");
}

/** Build `?a=<json>&b=<json>` with keys sorted lexicographically (matches Axum BTreeMap decode). */
function voxQueryString(query: Record<string, unknown>): string {
  const keys = Object.keys(query).sort();
  if (keys.length === 0) return "";
  const parts = keys.map(
    (k) => `${encodeURIComponent(k)}=${encodeURIComponent(JSON.stringify(query[k]))}`,
  );
  return `?${parts.join("&")}`;
}

async function $get<T>(path: string, schema?: { parse: (x: any) => T }, query?: Record<string, unknown>, init?: RequestInit): Promise<T> {
  const base = voxApiBase();
  const url = base ? `${base}${path}` : path;
  const qs = query && Object.keys(query).length > 0 ? voxQueryString(query) : "";
  const r = await fetch(`${url}${qs}`, { method: "GET", ...init });
  if (!r.ok) {
    const t = await r.text().catch(() => "");
    throw new VoxApiError(r.status, path, t, parseVoxWireError(t));
  }
  const data = await r.json();
  return schema ? schema.parse(data) : (data as T);
}

async function $post<T>(path: string, schema?: { parse: (x: any) => T }, body?: unknown, init?: RequestInit): Promise<T> {
  const base = voxApiBase();
  const url = base ? `${base}${path}` : path;
  const r = await fetch(url, {
    method: "POST",
    headers: { "Content-Type": "application/json" },
    body: JSON.stringify(body ?? {}),
    ...init,
  });
  if (!r.ok) {
    const t = await r.text().catch(() => "");
    throw new VoxApiError(r.status, path, t, parseVoxWireError(t));
  }
  const data = await r.json();
  return schema ? schema.parse(data) : (data as T);
}

function isTauri(): boolean {
  return typeof window !== "undefined" && typeof (window as any).__TAURI_INVOKE__ !== "undefined";
}

async function $tauri<T>(cmd: string, args: Record<string, unknown>, schema?: { parse: (x: any) => T }): Promise<T> {
  try {
    // @ts-ignore
    const data = await (window as any).__TAURI_INVOKE__(cmd, { request: args });
    return schema ? schema.parse(data) : (data as T);
  } catch (e: any) {
    throw new VoxApiError(500, cmd, e.toString(), undefined);
  }
}

/** @query `find_user` → `/api/query/find_user` (GET) */
export async function find_user(args: { name: string }, init?: RequestInit): Promise<string> {
  if (isTauri()) return $tauri<string>("find_user", { name: args.name }, z.string());
  return $get<string>("/api/query/find_user", z.string(), { name: args.name }, init);
}



=== openapi.json ===
{
  "openapi": "3.1.0",
  "info": {
    "title": "vox-app",
    "version": "0.1.0",
    "description": "Generated from Vox source. Conforms to wire-format-v1.\n\nQuery (`GET`) parameters: each query value is JSON text after URI decoding — see wire-format-v1 SSOT §2.1. The `schema` on each parameter describes the logical type after `JSON.parse`; it is not the raw query-string token shape."
  },
  "servers": [
    {
      "url": ""
    }
  ],
  "paths": {
    "/api/query/find_user": {
      "get": {
        "operationId": "find_user",
        "summary": "GET /api/query/find_user",
        "parameters": [
          {
            "name": "name",
            "in": "query",
            "required": true,
            "description": "JSON-encoded value after URI decoding (`JSON.parse`), per wire-format-v1 §2.1.",
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "description": "Success",
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            }
          },
          "400": {
            "description": "Bad request or malformed parameters",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            }
          },
          "429": {
            "description": "Rate limited",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            }
          },
          "500": {
            "description": "Internal server error",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            }
          },
          "default": {
            "description": "Error — see wire-format-v1 §6",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            }
          }
        }
      }
    },
    "/healthz": {
      "get": {
        "operationId": "healthz",
        "summary": "GET /healthz",
        "responses": {
          "200": {
            "description": "Service is healthy",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "required": [
                    "status",
                    "backend",
                    "schema_version",
                    "missing_tables",
                    "baseline_digest"
                  ],
                  "properties": {
                    "status": {
                      "type": "string"
                    },
                    "backend": {
                      "type": "string"
                    },
                    "schema_version": {
                      "type": "integer"
                    },
                    "missing_tables": {
                      "type": "array",
                      "items": {
                        "type": "string"
                      }
                    },
                    "baseline_digest": {
                      "type": "string"
                    }
                  }
                }
              }
            }
          },
          "503": {
            "description": "Service degraded/unavailable",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            }
          },
          "default": {
            "description": "Error — see wire-format-v1 §6",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            }
          }
        }
      }
    },
    "/readyz": {
      "get": {
        "operationId": "readyz",
        "summary": "GET /readyz",
        "responses": {
          "200": {
            "description": "Service is healthy",
            "content": {
              "application/json": {
                "schema": {
                  "type": "object",
                  "required": [
                    "status",
                    "backend",
                    "schema_version",
                    "missing_tables",
                    "baseline_digest"
                  ],
                  "properties": {
                    "status": {
                      "type": "string"
                    },
                    "backend": {
                      "type": "string"
                    },
                    "schema_version": {
                      "type": "integer"
                    },
                    "missing_tables": {
                      "type": "array",
                      "items": {
                        "type": "string"
                      }
                    },
                    "baseline_digest": {
                      "type": "string"
                    }
                  }
                }
              }
            }
          },
          "503": {
            "description": "Service degraded/unavailable",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            }
          },
          "default": {
            "description": "Error — see wire-format-v1 §6",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/ErrorEnvelope"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "ErrorEnvelope": {
        "type": "object",
        "description": "Wire-format v1 error body (SSOT §6). Returned for 4xx/5xx endpoint failures.",
        "required": [
          "ok",
          "code",
          "message"
        ],
        "properties": {
          "ok": {
            "type": "boolean",
            "const": false
          },
          "code": {
            "type": "string",
            "description": "Stable SCREAMING_SNAKE_CASE machine code"
          },
          "message": {
            "type": "string"
          },
          "request_id": {
            "type": "string",
            "description": "Optional trace / request correlation id"
          },
          "details": {
            "description": "Optional structured payload; shape is code-specific"
          }
        }
      }
    }
  }
}
